[gd_scene load_steps=9 format=3 uid="uid://cqkal8qweomja"]

[ext_resource type="Script" path="res://scenes/ui/game/pick_item.gd" id="1_nt6nc"]
[ext_resource type="PackedScene" uid="uid://b3ch61msnptyv" path="res://scenes/ui/game/item_card.tscn" id="3_tngdm"]
[ext_resource type="StyleBox" uid="uid://dibwpul5ku25j" path="res://tress/sbe_default.tres" id="3_xismj"]
[ext_resource type="Shader" path="res://shaders/show.gdshader" id="4_lsvw0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4xcxd"]
shader = ExtResource("4_lsvw0")
shader_parameter/color_1 = Color(0.96, 0.57, 0.15, 1)
shader_parameter/color_2 = Color(1, 0.89, 0.41, 1)
shader_parameter/count = 12
shader_parameter/speed = 6.0

[sub_resource type="Animation" id="Animation_t0kqk"]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sd8u7"]
resource_name = "RESET"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6op2"]
_data = {
"Enter": SubResource("Animation_t0kqk"),
"RESET": SubResource("Animation_sd8u7")
}

[node name="PickItem" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_nt6nc")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.0
offset_top = 80.0
offset_right = 147.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Gift of the gods"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RerollCount" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -158.0
offset_right = 147.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Reroll Count: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RootPanel" type="Control" parent="."]
custom_minimum_size = Vector2(0, 240)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -120.0
offset_right = 0.0679932
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="ColorRect" parent="RootPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.243137, 0.27451, 1)

[node name="HBox" type="HBoxContainer" parent="RootPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RootPanel/HBox"]
material = SubResource("ShaderMaterial_4xcxd")
layout_mode = 2
size_flags_horizontal = 3

[node name="CardBox" type="HBoxContainer" parent="RootPanel/HBox/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ItemCard" parent="RootPanel/HBox/ColorRect/CardBox" instance=ExtResource("3_tngdm")]
layout_mode = 2

[node name="ItemCard2" parent="RootPanel/HBox/ColorRect/CardBox" instance=ExtResource("3_tngdm")]
layout_mode = 2

[node name="ItemCard3" parent="RootPanel/HBox/ColorRect/CardBox" instance=ExtResource("3_tngdm")]
layout_mode = 2

[node name="ItemCard4" parent="RootPanel/HBox/ColorRect/CardBox" instance=ExtResource("3_tngdm")]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="RootPanel/HBox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/separator = ExtResource("3_xismj")

[node name="ButtonBar" type="VBoxContainer" parent="RootPanel/HBox"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="RootPanel/HBox/ButtonBar"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RerollButton" type="Button" parent="RootPanel/HBox/ButtonBar"]
custom_minimum_size = Vector2(240, 50)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Reroll"

[node name="SkipButton" type="Button" parent="RootPanel/HBox/ButtonBar"]
custom_minimum_size = Vector2(240, 50)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Skip
"

[node name="HSeparator2" type="HSeparator" parent="RootPanel/HBox/ButtonBar"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="RootPanel/HBox"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/separator = ExtResource("3_xismj")

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g6op2")
}

[connection signal="button_down" from="RootPanel/HBox/ButtonBar/RerollButton" to="." method="_on_reroll_button_button_down"]
[connection signal="mouse_entered" from="RootPanel/HBox/ButtonBar/RerollButton" to="." method="_on_reroll_button_mouse_entered"]
[connection signal="button_down" from="RootPanel/HBox/ButtonBar/SkipButton" to="." method="_on_skip_button_button_down"]
[connection signal="mouse_entered" from="RootPanel/HBox/ButtonBar/SkipButton" to="." method="_on_skip_button_mouse_entered"]
